--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,5 @@
 [template.environment]
   NAME = "enter Name of the receiver"
   PIC = "enter web url of the receiver's image"
+  SCROLL_MSG = "test"
+  
